<resources>
    <string name="app_name">valorpay</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="post">Post</string>
    <string name="view_post">View Post</string>
    <string name="likes">Likes</string>
    <string name="hours"> h</string>
    <string name="comments">Comments</string>
    <string name="no_internet">No Internet</string>
    <string name="refresh">Refresh</string>
</resources>