<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="10dp"
    app:cardElevation="3dp"
    android:layout_margin="10dp"
    android:padding="0dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        >
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/iv_user_comments"
            android:padding="0dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_comments_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingStart="5dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/app_name" />
            <TextView
                android:id="@+id/tv_comments_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:paddingStart="5dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="@dimen/small" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:id="@+id/tv_timeStamp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/likes"
                    android:textColor="@android:color/darker_gray"                 android:layout_width="wrap_content"
                    android:layout_gravity="start"
                    android:paddingStart="5dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:textSize="@dimen/small" />
                <TextView
                    android:id="@+id/tv_likes"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/hours"
                    android:textColor="@android:color/darker_gray"                 android:layout_width="wrap_content"
                    android:layout_gravity="start"
                    android:paddingStart="5dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:textSize="@dimen/small" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>